Added register/login pages and fixed api code