@@ -1,12 +1,9 @@
 package structure.twitterapi.dto.mapper;
 
 import java.util.HashSet;
-import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
-import structure.twitterapi.dto.RoleResponseDto;
-import structure.twitterapi.dto.UserAccountRequestDto;
-import structure.twitterapi.dto.UserAccountResponseDto;
+import structure.twitterapi.dto.UserRegisterDto;
+import structure.twitterapi.dto.UserResponseDto;
 import structure.twitterapi.model.UserAccount;
 
 @Component
@@ -17,22 +14,18 @@ public class UserAccountMapper {
         this.roleMapper = roleMapper;
     }
 
-    public UserAccountResponseDto toDto(UserAccount account) {
-        UserAccountResponseDto dto = new UserAccountResponseDto();
-        dto.setId(account.getId());
-        dto.setUsername(account.getUsername());
-        List<RoleResponseDto> roles = account.getRole().stream()
-                .map(roleMapper::toDto)
-                .collect(Collectors.toList());
-        dto.setRoles(roles);
-        return dto;
+    public UserResponseDto toDto(UserAccount user) {
+        return new UserResponseDto(
+                user.getId(),
+                user.getUsername(),
+                user.getRole().stream().map(roleMapper::toDto).toList());
     }
 
-    public UserAccount toModel(UserAccountRequestDto dto) {
-        UserAccount account = new UserAccount();
-        account.setUsername(dto.getUsername());
-        account.setPassword(dto.getPassword());
-        account.setRole(new HashSet<>());
-        return account;
+    public UserAccount toModel(UserRegisterDto dto) {
+        UserAccount user = new UserAccount();
+        user.setUsername(dto.username());
+        user.setPassword(dto.password());
+        user.setRole(new HashSet<>());
+        return user;
     }
 }
